
[TestDashboardView_FilterMode/enter_filter - 1]
TestDashboardView_FilterMode/enter_filter
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": true,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 2,
        "SelectedIndex": 0,
        "HasError": false
      }
    }
  ]
}
---

[TestDashboardView_FilterMode/filter_typing_c - 1]
TestDashboardView_FilterMode/filter_typing_c
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": true,
        "FilterQuery": "c",
        "SortOrder": "Created ↓",
        "ItemCount": 2,
        "SelectedIndex": 0,
        "HasError": false
      }
    }
  ]
}
---

[TestDashboardView_FilterMode/filter_navigation - 1]
TestDashboardView_FilterMode/filter_navigation
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": true,
        "FilterQuery": "↓",
        "SortOrder": "Created ↓",
        "ItemCount": 0,
        "SelectedIndex": 0,
        "HasError": false
      }
    }
  ]
}
---

[TestDashboardView_FilterMode/filter_enter_opens_menu - 1]
TestDashboardView_FilterMode/filter_enter_opens_menu
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": true,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ContextMenuView",
      "Data": {
        "Type": "ContextMenuView",
        "Handle": "test-ws",
        "Items": [
          {
            "Key": "i",
            "Label": "Inspect",
            "Desc": "View workspace details"
          },
          {
            "Key": "p",
            "Label": "Path",
            "Desc": "Copy path to clipboard"
          },
          {
            "Key": "u",
            "Label": "Update",
            "Desc": "Edit purpose"
          },
          {
            "Key": "e",
            "Label": "Exec",
            "Desc": "Run command"
          },
          {
            "Key": "h",
            "Label": "History",
            "Desc": "Execution history"
          },
          {
            "Key": "a",
            "Label": "Add",
            "Desc": "Add repository"
          },
          {
            "Key": "r",
            "Label": "Remove",
            "Desc": "Remove repository"
          },
          {
            "Key": "c",
            "Label": "Capture",
            "Desc": "Create or view captures"
          },
          {
            "Key": "D",
            "Label": "Derive",
            "Desc": "Generate context JSON"
          },
          {
            "Key": "v",
            "Label": "Validate",
            "Desc": "Check AGENTS.md"
          },
          {
            "Key": "k",
            "Label": "Health",
            "Desc": "Check workspace health"
          }
        ],
        "SelectedKey": "i",
        "CurrentPage": 1,
        "PageCount": 3
      }
    }
  ]
}
---

[TestDashboardView_FilterMode/filter_and_cancel - 1]
TestDashboardView_FilterMode/filter_and_cancel
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    }
  ]
}
---

[TestDashboardView_FilterMode/sort_created_desc - 1]
TestDashboardView_FilterMode/sort_created_desc
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": true,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 3,
        "SelectedIndex": 0,
        "HasError": false
      }
    }
  ]
}
---

[TestDashboardView_FilterMode/sort_created_asc - 1]
TestDashboardView_FilterMode/sort_created_asc
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": true,
        "FilterQuery": "",
        "SortOrder": "Created ↑",
        "ItemCount": 3,
        "SelectedIndex": 0,
        "HasError": false
      }
    }
  ]
}
---

[TestDashboardView_FilterMode/sort_purpose_asc - 1]
TestDashboardView_FilterMode/sort_purpose_asc
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": true,
        "FilterQuery": "",
        "SortOrder": "Purpose ↑",
        "ItemCount": 3,
        "SelectedIndex": 0,
        "HasError": false
      }
    }
  ]
}
---

[TestDashboardView_FilterMode/sort_purpose_desc - 1]
TestDashboardView_FilterMode/sort_purpose_desc
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": true,
        "FilterQuery": "",
        "SortOrder": "Purpose ↓",
        "ItemCount": 3,
        "SelectedIndex": 0,
        "HasError": false
      }
    }
  ]
}
---

[TestDashboardView_FilterMode/sort_handle_asc - 1]
TestDashboardView_FilterMode/sort_handle_asc
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": true,
        "FilterQuery": "",
        "SortOrder": "Handle ↑",
        "ItemCount": 3,
        "SelectedIndex": 0,
        "HasError": false
      }
    }
  ]
}
---

[TestDashboardView_FilterMode/sort_handle_desc - 1]
TestDashboardView_FilterMode/sort_handle_desc
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": true,
        "FilterQuery": "",
        "SortOrder": "Handle ↓",
        "ItemCount": 3,
        "SelectedIndex": 0,
        "HasError": false
      }
    }
  ]
}
---
